update on home and sample creation page

--- a/website/app/application/core/projects/project/files/all.html
+++ b/website/app/application/core/projects/project/files/all.html
@@ -3,7 +3,7 @@
         <div class="row">
             <h4 class="file-color text-uppercase text-center">file tree</h4>
         </div>
-        <div class="row">
+        <div ng-if="false" class="row">
             <div class="col-sm-12">
                 <input placeholder="Search all..." class="form-control" ng-model="search">
             </div>
