--- a/website/app/application/core/projects/project/processes/create/process-settings.html
+++ b/website/app/application/core/projects/project/processes/create/process-settings.html
@@ -1,5 +1,5 @@
 <div>
-    <h4>Process Setup</h4>
+    <h4>Setup</h4>
 
     <div class="row" ng-form="settingForm" ng-repeat="setting in settings">
         <div ng-switch="setting.property._type">
