--- a/website/app/application/core/projects/project/files/file-edit-controls.html
+++ b/website/app/application/core/projects/project/files/file-edit-controls.html
@@ -30,6 +30,6 @@
         </ul>
     </li>
     <li ng-if="!ctrl.renameActive" class="dropdown">
-        <a ng-click="ctrl.deleteFile()" class="text-uppercase text-danger small">delete</a>
+        <a ng-confirm-click="Do you want to delete this file?"  ng-click="ctrl.deleteFile()" class="text-uppercase text-danger small">delete</a>
     </li>
 </ul>
