--- a/website/app/application/core/projects/project/processes/create/create.html
+++ b/website/app/application/core/projects/project/processes/create/create.html
@@ -128,6 +128,9 @@
                 </textarea>
             </div>
         </div>
+        <div class="col-xs-7">
+            <process-settings settings="ctrl.process.setup.settings[0].properties"></process-settings>
+        </div>
     </div>
     <div class="row">
         <ul class="list-inline" style="padding-top:50px">
