--- a/website/app/index.html
+++ b/website/app/index.html
@@ -237,5 +237,6 @@
 <script src="application/core/projects/project/home/directives/display-sample-controller.js"></script>
 <script src="application/core/components/properties/partials/display-process-name-directive.js"></script>
 <script src="application/services/mcmodal/existing-process-controller.js"></script>
+<script src="application/services/mcmodal/image-controller.js"></script>
 </body>
 </html>
