--- a/website/app/application/directives/display-file-contents.html
+++ b/website/app/application/directives/display-file-contents.html
@@ -11,7 +11,11 @@
         </div>
     </div>
     <div ng-switch-when="xls">
-        <span><i class="fa fa-fw fa-file-excel-o"></i>Download the excel file</span>
+        <span><i class="fa fa-fw fa-file-excel-o"></i><a ng-href="{{view.downloadSrc()}}"
+                                                         class="text-uppercase small"
+                                                         download="{{view.file.name}}">
+            Download</a>  the excel file</span>
+
     </div>
     <div ng-switch-when="binary">
         <span><i class="fa fa-fw fa-file-o"></i>Binary file cannot be displayed</span>
