--- a/website/app/application/core/projects/project/samples/samples.html
+++ b/website/app/application/core/projects/project/samples/samples.html
@@ -44,8 +44,9 @@
 
                 <div class="text-muted truncate-text">{{s.description}}</div>
                 <div class="row counts">
-                    <span><i data-placement="right" data-toggle="tooltip" title="Transformations"
-                             class="fa fa-fw fa-flask" style="color: #ff5a60;"></i>{{s.transforms}}</span>
+                    <span>
+                        <i popover-placement="top" uib-popover="On the Top!" class="fa fa-fw fa-flask"
+                           style="color: #ff5a60;"></i>{{s.transforms}}</span>
                     <span class="padding-left-15"><i data-placement="right" data-toggle="tooltip" title="Files"
                                                      class="fa fa-fw fa-files-o file"></i>{{s.files.length}}  </span>
                     <span class="padding-left-15"><composition properties="s.properties"></composition></span>
