--- a/website/app/index.html
+++ b/website/app/index.html
@@ -219,6 +219,7 @@
 <script src="application/filters/bykey-filter.js"></script>
 <script src="application/filters/event-filter.js"></script>
 <script src="application/filters/bytes.js"></script>
+<script src="application/filters/transform-processes-filter.js"></script>
 <script src="index/_navigation-controller.js"></script>
 <script src="index/_alerts-controller.js"></script>
 <script src="index/projects-modal.js"></script>
