--- a/website/app/application/directives/display-file-contents.html
+++ b/website/app/application/directives/display-file-contents.html
@@ -1,6 +1,6 @@
 <div ng-switch="view.fileType">
     <div ng-switch-when="image">
-        <a><img ng-click="view.showImage(view.file)" class="col-xs-3 no-padding img-responsive center-block"
+        <a><img ng-click="view.showImage(view.file)" class="no-padding img-responsive center-block"
                 ng-src="{{view.fileSrc}}"> </a>
     </div>
     <div ng-switch-when="pdf">
@@ -11,20 +11,19 @@
         </div>
     </div>
     <div ng-switch-when="xls">
-        <span><i class="fa fa-fw fa-file-excel-o"></i><a ng-href="{{view.downloadSrc()}}"
-                                                         class="text-uppercase small"
-                                                         download="{{view.file.name}}">
-            Download</a>  the excel file</span>
-
+        <span><i class="fa fa-fw fa-file-excel-o"></i>
+            <a ng-href="{{view.downloadSrc()}}" class="text-uppercase small"
+               download="{{view.file.name}}"> Download</a>  the excel file
+        </span>
     </div>
     <div ng-switch-when="binary">
         <span><i class="fa fa-fw fa-file-o"></i>Binary file cannot be displayed</span>
     </div>
     <div ng-switch-default>
-        <div ng-click="view.showImage(view.file)" class="snippet" ng-if="view.file.size <= 10000"
+        <div ng-click="view.showImage(view.file)"
              hljs include="view.fileSrc">
         </div>
-        <code ng-click="view.showImage(view.file)" class="snippet"
+        <code ng-click="view.showImage(view.file)"
               ng-if="view.file.size > 10000 && view.file.size <= 2000000"
               style="white-space: pre-line" ng-include="view.fileSrc">
         </code>
