--- a/website/app/application/directives/display-file-contents.html
+++ b/website/app/application/directives/display-file-contents.html
@@ -20,7 +20,7 @@
         <span><i class="fa fa-fw fa-file-o"></i>Binary file cannot be displayed</span>
     </div>
     <div ng-switch-default>
-        <div ng-click="view.showImage(view.file)"
+        <div ng-if="view.file.size < 100000" ng-click="view.showImage(view.file)"
              hljs include="view.fileSrc">
         </div>
         <code ng-click="view.showImage(view.file)"
