--- a/website/app/application/core/projects/project/files/edit.html
+++ b/website/app/application/core/projects/project/files/edit.html
@@ -13,7 +13,7 @@
         </div>
 
         <div class="row">
-            <div class="col-xs-3" style="max-height: 250px; overflow: hidden;">
+            <div class="col-xs-5">
                 <display-file-contents file="ctrl.file"></display-file-contents>
             </div>
         </div>
