--- a/website/app/application/core/projects/project/reviews/reviews.html
+++ b/website/app/application/core/projects/project/reviews/reviews.html
@@ -8,24 +8,6 @@
         <br>
 
         <div class="row">
-            <!--<div class="col-sm-12">-->
-            <!--<a ng-click="ctrl.listReviewsByType('my_reviews')"-->
-            <!--ng-class="{'text-muted': ctrl.category === 'my_reviews'}"-->
-            <!--class="pull-right text-muted padding-left-15"><i-->
-            <!--class="fa fa-fw fa-user"></i> My Reviews</a>-->
-            <!--<a ng-click="ctrl.listReviewsByType('due')"-->
-            <!--ng-class="{'text-muted': ctrl.category === 'due'}"-->
-            <!--class="pull-right text-muted padding-left-15"><i-->
-            <!--class="fa fa-fw fa-exclamation-circle text-danger"></i>Due</a>-->
-            <!--<a ng-click="ctrl.listReviewsByType('closed')"-->
-            <!--ng-class="{'text-muted': ctrl.category === 'closed'}"-->
-            <!--class="pull-right text-muted padding-left-15"><i-->
-            <!--class="fa fa-fw fa-archive"></i>Archived</a>-->
-            <!--<a ng-click="ctrl.listReviewsByType('all')"-->
-            <!--ng-class="{'text-muted': ctrl.category === 'all'}"-->
-            <!--class="pull-right text-muted padding-left-15"><i-->
-            <!--class="fa fa-fw fa-list"></i>All</a>-->
-            <!--</div>-->
             <div class="col-sm-12">
                 <a class="pull-right text-muted padding-left-15"
                    ng-class="{'text-muted': ctrl.category !== 'my_reviews'}"
@@ -64,9 +46,12 @@
                 <div class="row counts">
                     <span data-placement="right" data-toggle="tooltip" title="Samples"><i
                             class="fa fa-fw fa-cubes sample"></i>{{(r.attachments | byKey: 'type': 'sample').length}}</span>
-                    <span data-placement="right" data-toggle="tooltip" title="Processes" class="padding-left-15"><i class="fa fa-fw fa-code-fork process"></i>{{(r.attachments | byKey: 'type': 'process').length}}  </span>
-                    <span data-placement="right" data-toggle="tooltip" title="Files" class="padding-left-15"><i class="fa fa-fw fa-files-o file"></i>{{(r.attachments | byKey: 'type': 'file').length}}    </span>
-                    <span data-placement="right" data-toggle="tooltip" title="Comments" class="pull-right"><i class="fa fa-fw fa-comments-o review"></i>{{r.messages.length}}</span>
+                    <span data-placement="right" data-toggle="tooltip" title="Processes" class="padding-left-15"><i
+                            class="fa fa-fw fa-code-fork process"></i>{{(r.attachments | byKey: 'type': 'process').length}}  </span>
+                    <span data-placement="right" data-toggle="tooltip" title="Files" class="padding-left-15"><i
+                            class="fa fa-fw fa-files-o file"></i>{{(r.attachments | byKey: 'type': 'file').length}}    </span>
+                    <span data-placement="right" data-toggle="tooltip" title="Comments" class="pull-right"><i
+                            class="fa fa-fw fa-comments-o review"></i>{{r.messages.length}}</span>
                 </div>
             </li>
         </ul>
