--- a/website/app/index.html
+++ b/website/app/index.html
@@ -214,6 +214,7 @@
 <script src="application/core/projects/services/toggle-dragbuttons-service.js"></script>
 <script src="application/services/model/projects-service.js"></script>
 <script src="application/services/model/templates-service.js"></script>
+<script src="application/services/projects-service.js"></script>
 <script src="application/filters/todatestring-filter.js"></script>
 <script src="application/filters/reverse-filter.js"></script>
 <script src="application/filters/bykey-filter.js"></script>
