Prototype adding composition when creating a sample.

--- a/website/app/application/core/projects/project/processes/create/create.html
+++ b/website/app/application/core/projects/project/processes/create/create.html
@@ -133,6 +133,12 @@
         </div>
     </div>
     <div class="row">
+        <div class="col-xs-9">
+            Composition
+            <periodic-table doc="ctrl.doc"></periodic-table>
+        </div>
+    </div>
+    <div class="row">
         <ul class="list-inline" style="padding-top:50px">
             <li>
                 <button ng-click="ctrl.submitSample()"
