--- a/website/app/application/directives/periodic-table.html
+++ b/website/app/application/directives/periodic-table.html
@@ -17,7 +17,10 @@
         <tbody>
         <tr ng-repeat="each in doc.value">
             <td>{{each.element}}</td>
-            <td><input name="number" validator="number"   ng-model="each.value" class="form-control" type="text" style="width:40%"></td>
+            <td>
+                <input name="number" validator="number" ng-model="each.value"
+                       class="form-control" type="text" style="width:40%">
+            </td>
             <td><a class="close" ng-click="removeElement($index)">x</a></td>
         </tr>
         </tbody>
@@ -83,64 +86,64 @@
     <div id="clear"></div>
     <div id="lowerContainer">
         <div class="bottom">
-            <div class="box"><a> La </a></div>
-            <div class="box"><a> Ac </a></div>
+            <div class="box"><a>La</a></div>
+            <div class="box"><a>Ac</a></div>
         </div>
         <div class="bottom">
-            <div class="box"><a> Ce </a></div>
-            <div class="box"><a> Th </a></div>
+            <div class="box"><a>Ce</a></div>
+            <div class="box"><a>Th</a></div>
         </div>
         <div class="bottom">
-            <div class="box"><a> Pr </a></div>
-            <div class="box"><a> Pa </a></div>
+            <div class="box"><a>Pr</a></div>
+            <div class="box"><a>Pa</a></div>
         </div>
         <div class="bottom">
-            <div class="box"><a> Nd</a></div>
-            <div class="box"><a> U </a></div>
+            <div class="box"><a>Nd</a></div>
+            <div class="box"><a>U</a></div>
         </div>
         <div class="bottom">
-            <div class="box"><a> Pm </a></div>
-            <div class="box"><a> Np </a></div>
+            <div class="box"><a>Pm</a></div>
+            <div class="box"><a>Np</a></div>
         </div>
         <div class="bottom">
-            <div class="box"><a> Sm </a></div>
-            <div class="box"><a> Pu </a></div>
+            <div class="box"><a>Sm</a></div>
+            <div class="box"><a>Pu</a></div>
         </div>
         <div class="bottom">
-            <div class="box"><a> Eu </a></div>
-            <div class="box"><a> Am </a></div>
+            <div class="box"><a>Eu</a></div>
+            <div class="box"><a>Am</a></div>
         </div>
         <div class="bottom">
-            <div class="box"><a> Gd </a></div>
-            <div class="box"><a> Cm </a></div>
+            <div class="box"><a>Gd</a></div>
+            <div class="box"><a>Cm</a></div>
         </div>
         <div class="bottom">
-            <div class="box"><a> Tb</a></div>
-            <div class="box"><a> Bk</a></div>
+            <div class="box"><a>Tb</a></div>
+            <div class="box"><a>Bk</a></div>
         </div>
         <div class="bottom">
-            <div class="box"><a> Dy </a></div>
-            <div class="box"><a> Cf </a></div>
+            <div class="box"><a>Dy</a></div>
+            <div class="box"><a>Cf</a></div>
         </div>
         <div class="bottom">
-            <div class="box"><a>Ho </a></div>
-            <div class="box"><a> Es</a></div>
+            <div class="box"><a>Ho</a></div>
+            <div class="box"><a>Es</a></div>
         </div>
         <div class="bottom">
-            <div class="box"><a> Er </a></div>
-            <div class="box"><a> Fm</a></div>
+            <div class="box"><a>Er</a></div>
+            <div class="box"><a>Fm</a></div>
         </div>
         <div class="bottom">
-            <div class="box"><a> Tm </a></div>
-            <div class="box"><a>Md </a></div>
+            <div class="box"><a>Tm</a></div>
+            <div class="box"><a>Md</a></div>
         </div>
         <div class="bottom">
-            <div class="box"><a> Yb </a></div>
-            <div class="box"><a> No</a></div>
+            <div class="box"><a>Yb</a></div>
+            <div class="box"><a>No</a></div>
         </div>
         <div class="bottom">
-            <div class="box"><a> Lu</a></div>
-            <div class="box"><a> Lr</a></div>
+            <div class="box"><a>Lu</a></div>
+            <div class="box"><a>Lr</a></div>
         </div>
     </div>
 </section>
