--- a/website/app/index.html
+++ b/website/app/index.html
@@ -24,6 +24,7 @@
     <link href="assets/css/select2/select2.css" rel="stylesheet">
     <link href="assets/css/select2/select2-bootstrap.css" rel="stylesheet">
     <link href="assets/css/zenburn.css" rel="stylesheet">
+    <link href="assets/css/periodic-table.css" rel="stylesheet">
     <link href="assets/css/vis.css" rel="stylesheet">
     <link href="assets/css/fullcalendar.css" rel="stylesheet">
     <link href="assets/css/ng-tags-input.css" rel="stylesheet">
@@ -187,6 +188,7 @@
 <script src="application/directives/notes-list.js"></script>
 <script src="application/directives/files-list.js"></script>
 <script src="application/directives/reviews-list.js"></script>
+<script src="application/directives/periodic-table-directive.js"></script>
 <script src="application/directives/measurements-list.js"></script>
 <script src="application/services/mcmodal/templates-modal-controller.js"></script>
 <script src="application/services/select-items-service.js"></script>
