Return best_measure as a single value, rather than all values.

--- a/website/app/application/core/projects/project/processes/create/create.html
+++ b/website/app/application/core/projects/project/processes/create/create.html
@@ -35,26 +35,28 @@
                 </ul>
             </div>
             <div class="row">
-                <ul class="list-inline" style="padding-top:50px">
-                    <li>
-                        <button ng-click="ctrl.submit()"
-                                class="btn btn-default btn-info">
-                            Submit
-                        </button>
-                    </li>
-                    <li>
-                        <button ng-click="ctrl.submitAndAnother()"
-                                class="btn btn-default btn-info">
-                            Submit And Another
-                        </button>
-                    </li>
-                    <li>
-                        <button ng-click="ctrl.cancel()"
-                                class="btn btn-default btn-danger">
-                            Cancel
-                        </button>
-                    </li>
-                </ul>
+                <div class="col-xs-12">
+                    <ul class="list-inline" style="padding-top:50px">
+                        <li>
+                            <button ng-click="ctrl.submit()"
+                                    class="btn btn-default btn-info">
+                                Submit
+                            </button>
+                        </li>
+                        <li>
+                            <button ng-click="ctrl.submitAndAnother()"
+                                    class="btn btn-default btn-info">
+                                Submit And Another
+                            </button>
+                        </li>
+                        <li>
+                            <button ng-click="ctrl.cancel()"
+                                    class="btn btn-default btn-danger">
+                                Cancel
+                            </button>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
 
@@ -139,26 +141,28 @@
         </div>
     </div>
     <div class="row">
-        <ul class="list-inline" style="padding-top:50px">
-            <li>
-                <button ng-click="ctrl.submitSample()"
-                        class="btn btn-default btn-info">
-                    Submit
-                </button>
-            </li>
-            <li>
-                <button ng-click="ctrl.submitAndAnother()"
-                        class="btn btn-default btn-info">
-                    Submit And Another
-                </button>
-            </li>
-            <li>
-                <button ng-click="ctrl.cancel()"
-                        class="btn btn-default btn-danger">
-                    Cancel
-                </button>
-            </li>
-        </ul>
+        <div class="col-xs-12">
+            <ul class="list-inline" style="padding-top:50px">
+                <li>
+                    <button ng-click="ctrl.submitSample()"
+                            class="btn btn-default btn-info">
+                        Submit
+                    </button>
+                </li>
+                <li>
+                    <button ng-click="ctrl.submitAndAnother()"
+                            class="btn btn-default btn-info">
+                        Submit And Another
+                    </button>
+                </li>
+                <li>
+                    <button ng-click="ctrl.cancel()"
+                            class="btn btn-default btn-danger">
+                        Cancel
+                    </button>
+                </li>
+            </ul>
+        </div>
     </div>
 </div>
 
