--- a/website/app/application/core/projects/project/files/dir-overview.html
+++ b/website/app/application/core/projects/project/files/dir-overview.html
@@ -1,34 +1,119 @@
-<div class="col-xs-offset-1 col-xs-6">
-    <table class="table table-striped">
-        <thead>
-        <tr>
-            <th>Type</th>
-            <th>Count</th>
-            <th>Action</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr ng-repeat="entry in ctrl.overview">
-            <td>
-                <i class="fa fa-fw {{entry.icon}} file-color"></i> {{entry.name}}
-            </td>
-            <td>{{entry.count}}</td>
-            <td>
-                <a ng-if="entry.name !== 'Directory'"
-                   ng-click="ctrl.viewFiles(entry)" class="text-uppercase">
-                    view files
+<div>
+    <div class="col-xs-offset-3 col-xs-6">
+        <table class="table table-striped">
+            <thead>
+            <tr>
+                <th>Type</th>
+                <th>Count</th>
+                <th>Action</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td><i class="fa fa-fw fa-files-o file-color"></i> All</td>
+                <td>{{ctrl.allFiles.files.length}}</td>
+                <td>
+                    <a class="text-uppercase"
+                       ng-click="ctrl.viewFiles(ctrl.allFiles)">
+                        view files
+                    </a>
+                </td>
+            </tr>
+            <tr ng-repeat="entry in ctrl.overview">
+                <td>
+                    <i class="fa fa-fw {{entry.icon}} file-color"></i> {{entry.name}}
+                </td>
+                <td>{{entry.count}}</td>
+                <td>
+                    <a ng-if="entry.name !== 'Directory'"
+                       ng-click="ctrl.viewFiles(entry)" class="text-uppercase">
+                        view files
+                    </a>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+    <div ng-if="ctrl.files.length" class="col-xs-offset-1 col-xs-10">
+        <div class="row">
+            <span ng-if="ctrl.downloadState == 'preparing'">Preparing download (this may take some time)...</span>
+            <span ng-if="ctrl.downloadState == 'done'">
+                <a ng-href="{{ctrl.downloadURL}}" ng-click="ctrl.downloadState='none'">
+                    Preparation done click here to download
                 </a>
-            </td>
-        </tr>
-        </tbody>
-    </table>
-    <div ng-if="ctrl.files" class="section">
-        <div class="section-as-margin" ng-repeat="file in ctrl.files">
+            </span>
+            <ul ng-if="ctrl.downloadState === 'none'" class="list-inline">
+                <li class="pull-right">
+                    <input placeholder="Filter by name..."
+                           class="form-control"
+                           ng-model="ctrl.fileFilter.name"
+                           ng-model-options="{ updateOn: 'default blur', debounce: { default: 200, blur: 0} }">
+                </li>
+                <li ng-if="ctrl.downloadCount">
+                    <a class="text-uppercase" ng-click="ctrl.downloadSelectedFiles()">
+                        <i class="fa fa-fw fa-download"></i>download selected
+                    </a>
+                </li>
+                <li ng-if="!ctrl.downloadCount">
+                    <a class="text-uppercase" ng-click="ctrl.selectAllFiles()">
+                        select all
+                    </a>
+                </li>
+                <li ng-if="ctrl.downloadCount">
+                    <a class="text-uppercase" ng-click="ctrl.deselectSelectedFiles()">
+                        clear selected
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <table class="table table-striped">
+            <thead>
+            <tr>
+                <th>File</th>
+                <th>Select</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr ng-repeat="file in ctrl.files | filter:ctrl.fileFilter">
+                <td>
+                    <span>
+                        <b>{{$index+1}}.</b>
+                        <i class="fa fa-files-o fa-fw file-color"></i>
+                        <a ui-sref="projects.project.files.all.edit({file_id: file.id})">
+                            {{file.name}}
+                        </a>
+                        {{file.mediatype.mime}}
+                        {{file.size | bytes}}
+                    </span>
+
+                    <div ng-if="ctrl.isImage(file.mediatype.mime)">
+                        <a ui-sref="projects.project.files.all.edit({file_id: file.id})">
+                            <img class="img-thumbnail" height="140" width="140"
+                                 ng-src="{{ctrl.fileSrc(file.id)}}">
+                        </a>
+                    </div>
+                </td>
+                <td>
+                    <a ng-click="ctrl.fileSelect(file)">
+                        <i ng-if="file.selected" class="fa fa-2x fa-fw fa-check text-success"></i>
+                        <i ng-if="!file.selected" class="fa fa-2x fa-fw fa-square-o"></i>
+                    </a>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+
+
+        <div ng-if="false" class="section-as-margin" ng-repeat="file in ctrl.files">
             <span>
                 <b>{{$index+1}}. </b>
                 <i class="fa fa-files-o fa-fw file-color"></i>
                 <a ui-sref="projects.project.files.all.edit({file_id: file.datafile_id})">{{file.name}}</a>
                 {{file.mediatype.mime}}
+                <a ng-click="file.download = !file.download" class="pull-right">
+                    <i ng-if="file.download" class="fa fa-2x fa-fw fa-check text-success"></i>
+                    <i ng-if="!file.download" class="fa fa-2x fa-fw fa-square-o"></i>
+                </a>
             </span>
 
             <div ng-if="ctrl.isImage(file.mediatype.mime)">
